results/SpecGenBench/4-shot/log-MyPower-2023_11_05_04_21_53.txt
class MyPower {
    //@ requires n >= 0;
    //@ ensures \result == x^n;
    public static int power(int x, int n) {
        int res = 1;
        //@ maintaining res == x^i && 0 <= i && i <= n;
        //@ decreases n - i;
        for(int i = 0; i < n; i++)
	    res = res * x;
        return res;
    }
}
/home/max/Documents/JMLGPT/tmp/MyPower.java:3: error: bad operand types for binary operator '^'
    //@ ensures \result == x^n;
                            ^
  first type:  boolean
  second type: int
/home/max/Documents/JMLGPT/tmp/MyPower.java:6: error: bad operand types for binary operator '^'
        //@ maintaining res == x^i && 0 <= i && i <= n;
                                ^
  first type:  boolean
  second type: int
2 errors

